--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -77,6 +77,8 @@
   
   .user-info {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 10px;
     padding: 10px;
     color: white !important;
